# shop

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: main.py  models.py
backend/app/api/v1/: auth.py  dependencies.py  order.py  product.py  role.py  user.py
backend/app/core/: config.py  jwt.py  redis.py  security.py
backend/app/crud/: auth.py  order.py  product.py  role.py  user.py
backend/app/db/: session.py
backend/app/schemas/: order.py  product.py  role.py  user.py
migrations/: env.py
migrations/versions/: 091cf724bfaf_price_in_orderitem.py  0a33152b3c94_new_column_in_user.py  0f26d21440fd_price_in_order.py  123584ab1166_timestamp_in_order.py  287fc0bb30dc_set_default_role_in_user.py  4a1d544f5254_nullable_in_email.py  8a948aeae1c2_init_tables.py  9a68aed43ab2_nullable_at_role_in_user_schemas.py
