[tool.poetry]
name = "shop"
version = "0.1.0"
description = ""
authors = ["Anna Klimova <annaklimova2004@mail.ru>"]
package-mode = false   # ← ЭТА СТРОЧКА ВСЁ ПОЧИНИТ
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.12"

fastapi = ">=0.121.1,<0.122.0"
uvicorn = {extras = ["standard"], version = ">=0.38.0,<0.39.0"}

# БД
psycopg2-binary = ">=2.9.11,<3.0.0"
asyncpg = ">=0.30.0,<0.31.0"
sqlalchemy = ">=2.0.44,<3.0.0"
alembic = ">=1.17.1,<2.0.0"

# Redis
redis = {extras = ["async"], version = ">=7.0.1,<8.0.0"}
aioredis = ">=2.0.1,<3.0.0"

# Авторизация / безопасность
python-jose = {extras = ["cryptography"], version = ">=3.5.0,<4.0.0"}
passlib = {extras = ["bcrypt"], version = ">=1.7.4,<2.0.0"}

# Утилиты
python-multipart = ">=0.0.20,<0.0.21"
python-dotenv = ">=1.2.1,<2.0.0"
pydantic-settings = ">=2.12.0,<3.0.0"

# bcrypt
py-bcrypt = ">=0.4,<0.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
